--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ html {
 
 body {
     min-height: 100vh;
-    background: url("/imagens/pattern.png");
+    background: url("imagens/pattern.png");
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -59,7 +59,7 @@ h6 {
     justify-content: space-between;
     align-items: center;
     gap: 4rem;
-    flex-wrap: wrap;
+   flex-wrap: wrap;
 }
 
 .app__title {
