--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ h6 {
     justify-content: space-between;
     align-items: center;
     gap: 4rem;
-   flex-wrap: wrap;
+    flex-wrap: wrap;
 }
 
 .app__title {
@@ -162,6 +162,12 @@ h6 {
     align-items: center;
     justify-content: center;
     gap: 1rem;
+}
+
+.attention {
+    width: 20rem;
+    font-size: 4rem;
+    color: red;
 }
 
 .app__footer {
